Lost of iffy changes

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -1,1 +1,39 @@
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Manipulating HTML Using DOM</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+
+    <!-- <button id="btnMsg">Nice Message Brah</button>
+    
+    <button id="buttOn">List Brah</button>
+    <ul id="ul"></ul> -->
+
+    <div id="div1">
+        <form>
+            <input type="text" id='textBox'>
+            <input type="button" value="Submit" id='htmlButton'>
+        </form>
+    </div>
+
+    <div id="unDiv">
+
+        <button id="unBtn">unButton</button>
+    </div>
+
+    <button id="listBtn">List Button</button>
+    <ul id="ul"></ul>
+
+    <script src="app.js"></script>
+</body>
+
+</html>
